# AuroraPlan

./: .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  Rust for Rustaceans.md  SECURITY.md  docker-compose-no-dev.yml  docker-compose-postgres.yml  docker-compose.yml  init.lua  ng-aurora-ui.conf  no_Dockerfile  rustc-ice-2023-12-12T03_41_30-3815881.txt  rustc-ice-2023-12-13T06_00_05-1229185.txt  rustc-ice-2023-12-13T06_05_49-1236280.txt  rustc-ice-2023-12-13T06_06_03-1236488.txt
aurora-api/: Cargo.toml  api.rest
aurora-api/examples/: error_chain.rs  quick_dev.rs
aurora-api/src/: lib.rs  main.rs
aurora-api/src/ctx/: mod.rs
aurora-api/src/cypt/: mod.rs
aurora-api/src/model/: alert_groups.rs  cluster.rs  mod.rs
aurora-api/src/tests/: authenticator.rs  mod.rs  rpc_client.rs
aurora-api/src/web/: mod.rs  routes_alert_groups.rs  routes_alert_plugins.rs  routes_cluster.rs  routes_environment.rs  routes_projects.rs  routes_queues.rs  routes_resources.rs  routes_tenants.rs  routes_ui_plugins.rs  routes_user.rs  routes_worker_groups.rs
aurora-common/: Cargo.toml
aurora-common/src/: lib.rs
aurora-common/src/core_error/: error.rs  status.md
aurora-common/src/core_results/: results.rs
aurora-common/src/enums/: AlertStatus.rs  AlertType.rs  AuditOperationType.rs  AuditResourceType.rs  AuthorizationType.rs  BlockingOpportunity.rs  CacheType.rs  CommandType.rs  ComplementDependentMode.rs  ConditionType.rs  DbConnectType.rs  FailureStrategy.rs  Flag.rs  HttpCheckCondition.rs  HttpMethod.rs  PluginType.rs  Priority.rs  (+16 more)
aurora-config/: .env  Cargo.toml
aurora-config/api-config/: default.toml
aurora-config/dao-config/: default.toml
aurora-config/master-config/: default.toml  production.toml
aurora-config/src/: api_config.rs  dao_config.rs  lib.rs  master_config.rs  worker_config.rs
aurora-dao/: .env  Cargo.toml
aurora-dao/src/: lib.rs  main.rs  schema.rs
aurora-entity/: Cargo.toml  gen_entity.sh
aurora-entity/src/: convert.rs  lib.rs  prelude.rs  qrtz_blob_triggers.rs  qrtz_calendars.rs  qrtz_cron_triggers.rs  qrtz_fired_triggers.rs  qrtz_job_details.rs  qrtz_locks.rs  qrtz_paused_trigger_grps.rs  qrtz_scheduler_state.rs  qrtz_simple_triggers.rs  qrtz_simprop_triggers.rs  qrtz_triggers.rs  t_ds_access_token.rs  t_ds_alert.rs  t_ds_alert_plugin_instance.rs  t_ds_alert_send_status.rs  t_ds_alertgroup.rs  t_ds_audit_log.rs  t_ds_cluster.rs  t_ds_command.rs  t_ds_datasource.rs  t_ds_dq_comparison_type.rs  t_ds_dq_execute_result.rs  t_ds_dq_rule.rs  t_ds_dq_rule_execute_sql.rs  t_ds_dq_rule_input_entry.rs  t_ds_dq_task_statistics_value.rs  t_ds_environment.rs  t_ds_environment_worker_group_relation.rs  t_ds_error_command.rs  t_ds_fav_task.rs  t_ds_k8s.rs  t_ds_k8s_namespace.rs  t_ds_plugin_define.rs  t_ds_process_definition.rs  t_ds_process_definition_log.rs  t_ds_process_instance.rs  t_ds_process_task_relation.rs  (+29 more)
aurora-master/: Cargo.toml
aurora-master/src/: main.rs
aurora-proto/: Cargo.toml  build.rs  build_bk.rs
aurora-service/: Cargo.toml
aurora-service/src/: client.rs  main.rs  server.rs
aurora-srv/: Cargo.toml
aurora-srv/.sqlx/: query-0353832e67d3a72d86afdb3ce5dcb4df869dda9d2a8f5f18b3e042e210b8f7b0.json  query-0365e0dd7a28bbe74dd808542060d4eaaaa53cf9bcf446fa761a9beafd1fa317.json  query-03bf22332e2d9329c3dcd7722c68820ad48d3cb90839f79ae6c593ecc930262c.json  query-0ce735f9a192937b24c68ee0bd88070bfff251914855b62ac7a17d55ecaf3444.json  query-0e50b061a1bee9a9411f9c25f89f3cb0d9a654d4985d37a449a1e489fd1072cf.json  query-1f3224e94874322d5e45d19181822e2f6fbc5be502d07a832b5150debe39e9ab.json  query-2080e60712facda1ea3860392fd697660816a5ad6855ddc7b502a2cc9920241b.json  query-383126ee13da4088ad80aba28d299471832aed4375c7c2689dcff4c469da0fd3.json  query-3b75918e83cd1817643cffe2488ab93bf7d0cb16d9266e8327b69eb254310163.json  query-3bb2ba2020f105cf7cf57ffd806aa9a2a67e75d1f114b5c24540cda4ee8d73dd.json  query-4ecae82234c2ff0d9fa0ee2f0288c2f15ac95ce5ab3fab138b1ed13d0cc01dd7.json  query-51cba73f3b671d6a7073f04acf469626129be2c9a83a10c1c6b50625e256c351.json  query-604f75aca4fbb9b2965b7bfbd1f5766b7fee5dcd3f1c7db3af886b6660fa50be.json  query-6a689061a581be0eea96e04ff14f4977be7f7be31fc77c345e495f962cd97823.json  query-6ce97f74e7d603f49d57d0d86d8322a76e6bbf2080876b607aded51b5098ce19.json  query-78c14391fa8eb62024c70991b4d4e2856a87189115da63b7dd0239b5ff9dcf7b.json  query-7bb46fa2070879fd59d005d3c422b10f047ad7b1a83802f92619deec9f398a3d.json  query-843152f5d9aeb3f360f4bd23e1f344123af5565d4b14a3f63d866253f07582b7.json  query-872c97fde294a6bc0d8ee17cd5b369d75261d665c4f4b9b0e5af6b745d6cdd9f.json  query-a8ffca852205c8f7344ab5279c4731d6c6d5d6d03dce882a8979a14ea6e78083.json  query-ae7d58c3e1b04d603c7da0fd0f218e4c47a67879b3095def29136037e1d66360.json  query-c8c8b87f1ef3d212188d40f42d6224c74c292bbbbc814a849d0bc0292b96e61a.json  query-c9e27c845dc0c1b40a297ae61747a25d1580fb3e6d87771f28753696edf23594.json  query-ccf3881f1f43d3d49050e89fc29a147edbc1c564470537894a054ff2c2d7bcc4.json  query-e18d833328aac101da2acc267ba6e84082e1b96d1cf18fa87c0551ed3fb361de.json  query-fc9198d6123c4ed6972a54566d7ada5f1d99bf1d910d2d90b4f9cb815310b3f5.json
aurora-srv/migrations/: 20231206052828_init_setup.down.sql  20231206052828_init_setup.up.sql  20231206052930_init.down.sql  20231206052930_init.up.sql  20231206053033_env_view_crate.up.sql  20231206053117_env_realtion_trigger.down.sql  20231206053117_env_realtion_trigger.up.sql  20231206053204_trigger_env_relation.down.sql  20231206053204_trigger_env_relation.up.sql  20231207014140_table_upadte_trigger.down.sql  20231207014140_table_upadte_trigger.up.sql
aurora-srv/src/: main.rs
aurora-tests/: Cargo.toml
aurora-tests/src/: lib.rs
aurora-worker/: Cargo.toml
aurora-worker/src/: main.rs
crates/lib-common/: Cargo.toml
crates/lib-models/: .env  Cargo.toml  dump.sql
crates/lib-remote/: Cargo.toml
examples/aurora-base/: Cargo.toml
services/aurora-api/: Cargo.toml
services/aurora-master/: Cargo.toml
services/aurora-srv/: .env  Cargo.toml
tests/aurora-tests/: Cargo.toml
(+791 files in other folders)
