[workspace]
members = [
    "aurora-api",
    "aurora-proto",
    "aurora-config",
    "aurora-entity",
    "aurora-common",
    "aurora-service",
    "migration",
]

resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2021"
description = "AuroraPlan is your go-to scheduling and planning tool. It helps you manage your tasks and appointments effortlessly. With AuroraPlan, you can stay organized, save time, and enjoy a stress-free schedule."
repository = "https://github.com/heheshang/AuroraPlan"
keywords = [
    "aurora",
    "plan",
    "schedule",
    "task",
    "calendar",
    "planner",
    "organize",
    "management",
    "productivity",
    "time",
    "free",
    "project",
]
categories = ["science"]
license = "MIT OR Apache-2.0"


[workspace.dependencies]
async-std = "1.12.0"
axum = { version = "0.6.20" }
derive_builder = { version = "0.12.0" }
dotenvy = "0.15.7"
config = { version = "0.13.3" }
chrono = "0.4.26"
anyhow = "1.0.75"
serde_derive = "1.0.188"
serde = { version = "1.0.188" }
regex = "1.9.4"
futures = "0.3.28"
serde_json = "1.0.105"
serde_with = "3.3.0"
tokio = { version = "1.33.0" }
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = "0"
prost = "0.12.1"
prost-types = "0.12.1"
prost-build = { version = "0.11.6" }
tonic-build = "0.9.2"
proto-builder-trait = "0.5.1"
# prost = "0.11.9"
# prost-types = "0.11.9"
sea-orm = { version = "0.12.2", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "debug-print",
    "serde_json",
] }
sea-orm-migration = { version = "0.12" }


[profile.release-with-debug]
inherits = "release"
debug = true
