[workspace]
members = [
    "aurora-api",
    "aurora-proto",
    "aurora-config",
    "aurora-entity",
    "aurora-common",
    "aurora-service",
    "aurora-tests",
    "migration",
]

resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2021"
description = "AuroraPlan is your go-to scheduling and planning tool. It helps you manage your tasks and appointments effortlessly. With AuroraPlan, you can stay organized, save time, and enjoy a stress-free schedule."
repository = "https://github.com/heheshang/AuroraPlan"
keywords = ["aurora", "plan", "schedule", "task", "free"]
categories = ["science"]
license = "MIT OR Apache-2.0"


[workspace.dependencies]

async-std = "1.12.0"
async-trait = "0.1.73"
axum = { version = "0.6.20" }
derive_builder = { version = "0.12.0" }
error-chain = "0.12.4"
dotenvy = "0.15.7"
config = { version = "0.13.3" }
chrono = "0.4.26"
anyhow = "1.0.75"
serde_derive = "1.0.188"
serde = { version = "1.0.188" }
regex = "1.9.4"
futures = "0.3.28"
serde_json = "1.0.105"
serde_with = "3.3.0"
tokio = { version = "1.33.0" }
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tower-http = "0.4.4"
prost = "0.12.1"
prost-types = "0.12.1"
prost-build = { version = "0.11.6" }
tonic-build = "0.9.2"
tonic-health = "0.10.2"
listenfd = { version = "1.0" }
tokio-stream = { version = "0.1" }
proto-builder-trait = "0.5.1"
# prost = "0.11.9"
# prost-types = "0.11.9"
sea-orm = { version = "0.12.4", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "debug-print",
    "serde_json",
] }
sea-orm-migration = { version = "0.12.4" }
strum_macros = "0.25.2"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
tower = { version = "0.4.13", features = ["full"] }
once_cell = "1.18.0"
md5 = "0.7.0"
struct-convert = "1.2.9"
tower-cookies = "0.9.0"
httpc-test = "0.1.1"
serial_test = "2"
url = "2.4.1"
# axum_static = "1.2.3"
axum-extra = "0.8.0"


[profile.release-with-debug]
inherits = "release"
debug = true

[profile.dev]
incremental = true
