[workspace]
members = [
    "./services/aurora-api",
    "./crates/lib-proto",
    "./crates/lib-config",
    "./crates/lib-common",
    # './examples/mini-redis',
    "./services/aurora-srv",
    "./crates/lib-remote",
    "./services/aurora-master",
    "./services/aurora-worker",
    "./crates/lib-models",
]

resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2021"
description = "AuroraPlan is your go-to scheduling and planning tool. It helps you manage your tasks and appointments effortlessly. With AuroraPlan, you can stay organized, save time, and enjoy a stress-free schedule."
repository = "https://github.com/heheshang/AuroraPlan"
keywords = ["aurora", "plan", "schedule", "task", "free"]
categories = ["science"]
license = "MIT OR Apache-2.0"


[workspace.dependencies]
async-trait = "0.1.76"
axum = { version = "0.7.2" }
derive_builder = { version = "0.20.0" }
dotenvy = "0.15.7"
config = { version = "0.14.0" }
chrono = "0.4.26"
anyhow = "1.0.75"
serde = { version = "1.0.170" }
regex = "1.9.4"
serde_json = "1.0.113"
serde_with = "3.6.1"
tokio = { version = "1.36.0" }
tonic = "0.10.2"
# tracing = "0.1.40"
# tracing-subscriber = "0.3.17"
tower-http = "0.5.0"
prost = "0.12.1"
prost-types = "0.12.1"
tonic-health = "0.10.2"
listenfd = { version = "1.0" }
tokio-stream = { version = "0.1" }
# prost = "0.11.9"
# prost-types = "0.11.9"
# sea-orm = { version = "0.12.4", features = [
#     "sqlx-postgres",
#     "runtime-tokio-native-tls",
#     "debug-print",
#     "serde_json",
# ] }
# sea-orm-migration = { version = "0.12.4" }
strum_macros = "0.26.1"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
tower = { version = "0.4.13", features = ["full"] }
once_cell = "1.18.0"
md5 = "0.7.0"
struct-convert = "1.2.9"
tower-cookies = "0.10.0"
httpc-test = "0.1.1"
serial_test = "3.0.0"
url = "2.4.1"
axum-extra = "0.9.0"
rs-snowflake = "0.6.0"
# log = "0.4.20"
sqlx = "0.7.3"
bigdecimal = "0.4.2"
tracing = "0.1.34"
tokio-cron-scheduler = "0.10.0"
enum_dispatch="0.3.12"
chronoutil = "0.2"
educe = "0.5.9"
overload = "0.1.1"
typed-builder = "0.18.0"
tokio-util="0.7.10" 
futures-util = "0.3.30"
[workspace.metadata.hackerman]
lock = true

[profile.release-with-debug]
inherits = "release"
debug = true
# incremental = true
