[package]
name = "aurora-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
aurora_common = { path = "../aurora-common", package = "aurora-common" }
aurora_proto = { path = "../aurora-proto", package = "aurora-proto" }
aurora_config = { path = "../aurora-config", package = "aurora-config" }
tonic = { workspace = true }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["fs", "trace"] }
anyhow = { workspace = true }
once_cell = { workspace = true }
md5 = { workspace = true }
struct-convert = { workspace = true }
tower-cookies = { workspace = true }
error-chain = { workspace = true }
tonic-health = { workspace = true }
# axum_static = { workspace = true }
axum-extra = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
httpc-test = { workspace = true }
serial_test = { workspace = true }
url = { workspace = true }
