[package]
name = "aurora-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
aurora_common = { path = "../aurora-common", package = "aurora-common" }
aurora_config = { path = "../aurora-config", package = "aurora-config" }
aurora_proto = { path = "../aurora-proto", package = "aurora-proto" }
axum = { workspace = true }
axum-extra = { workspace = true }
fern = { workspace = true, features = ["chrono", "colored"] }
humantime.workspace = true
log.workspace = true
md5 = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
struct-convert = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-health = { workspace = true }
tower = { workspace = true, features = ["full"] }
tower-cookies = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
[dev-dependencies]
anyhow = { workspace = true }
httpc-test = { workspace = true }
serial_test = { workspace = true }
url = { workspace = true }
