[package]
name = "aurora-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["cn_msg"]
cn_msg = []
en_msg = []


[dependencies]
axum = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, optional = false }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tracing = { workspace = true }
