[package]
name = "aurora-common"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["cn_msg"]
cn_msg = []
en_msg = []


[dependencies]
axum = { workspace = true }
log = { version = "0.4.20", features = ["std"] }
regex = { workspace = true }
rs-snowflake = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, optional = false }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
typed-builder = "0.18.0"
fern = { workspace = true, features = ["chrono", "colored"] }
humantime.workspace = true