[package]
name = "dolphin-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { workspace = true, optional = false }
config = { workspace = true, optional = false, features = ["toml"] }
serde = { workspace = true, optional = false, features = ["derive"] }
