[package]
name = "aurora-config"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, optional = false }
dotenvy = { workspace = true, optional = false }
config = { workspace = true, optional = false, features = ["toml"] }
serde = { workspace = true, optional = false, features = ["derive"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["tracing-log", "fmt"] }
