[package]
name = "aurora-dao"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { workspace = true, features = [
    "postgres",
    "64-column-tables",
    "postgres_backend",
    "bigdecimal",
    "extras",
] }
dotenvy.workspace = true
fern = { version = "0.6.2", features = ["chrono", "colored"] }
listenfd.workspace = true
log = "0.4.20"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic.workspace = true
chrono = { workspace = true }
humantime = "2.1.0"
proto = { path = "../aurora-proto", package = "aurora-proto" }
aurora_common = { path = "../aurora-common", package = "aurora-common" }
aurora_config = { path = "../aurora-config", package = "aurora-config" }
anyhow = { workspace = true }
tonic-health = { workspace = true }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
serde_json.workspace = true
# diesel-async = { version = "0.4.1", features = ["r2d2", "postgres"] }
bigdecimal = { version = "0.4.2", features = ["serde", "string-only"] }
