[package]
name = "aurora-entity"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]


sea-orm = { workspace=true, features = ["sqlx-postgres"] }
serde = { workspace=true, features = ["derive"] }
proto = { version = "0.1.0", path = "../aurora-proto", package = "aurora-proto" }
serde_json = {workspace=true}
aurora_common = { version = "0.1.0", path = "../aurora-common", package = "aurora-common" }
