[package]
name = "aurora-master"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
aurora_common = { path = "../aurora-common", package = "aurora-common",features = ["otel"] }
aurora_config = { path = "../aurora-config", package = "aurora-config" }
aurora_proto = { path = "../aurora-proto", package = "aurora-proto" }
aurora_remote = { path = "../aurora-remote", package = "aurora-remote" }
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-cron-scheduler.workspace = true
tracing.workspace = true
