[package]
name = "aurora-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ['derive'] }
serde_with = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = { workspace = true }



[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = { workspace = true }



