[package]
name = "aurora-service"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "debug-print",
    "serde_json",
] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace=true, features = ["full"] }
tonic = { workspace = true }
entity = { version = "0.1.0", path = "../aurora-entity", package = "aurora-entity" }
proto = { version = "0.1.0", path = "../aurora-proto", package = "aurora-proto" }
aurora_common = { version = "0.1.0", path = "../aurora-common", package = "aurora-common" }
serde_json = { workspace = true }
chrono = { workspace = true }
aurora_config = { version = "0.1.0", path = "../aurora-config", package = "aurora-config" }

[[bin]]
name = "server"
path = "src/server.rs"
[[bin]]
name = "client"
path = "src/client.rs"