[package]
name = "aurora-srv"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
fern = { version = "0.6.2", features = ["chrono", "colored"] }
humantime = "2.1.0"
log = "0.4.20"
serde = { workspace = true, features = ["derive"] }
sqlx = { version = "0.7.3", features = [
    "postgres",
    "time",
    "uuid",
    "runtime-tokio-rustls",
    "chrono",
    "json",
    "bigdecimal",
] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic-health.workspace = true

aurora_common = { path = "../aurora-common", package = "aurora-common" }
aurora_config = { path = "../aurora-config", package = "aurora-config" }
proto = { path = "../aurora-proto", package = "aurora-proto" }
listenfd.workspace = true
tonic.workspace = true
bigdecimal = "0.4.2"
dotenvy.workspace = true
serde_json.workspace = true
