[package]
name = "aurora-srv"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
aurora_common = { path = "../aurora-common", package = "aurora-common" }
aurora_config = { path = "../aurora-config", package = "aurora-config" }
bigdecimal = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
dotenvy.workspace = true
fern = { workspace = true, features = ["chrono", "colored"] }
humantime.workspace = true
listenfd.workspace = true
log.workspace = true
proto = { path = "../aurora-proto", package = "aurora-proto" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "postgres",
    "time",
    "uuid",
    "runtime-tokio-rustls",
    "chrono",
    "json",
    "bigdecimal",
] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic.workspace = true
tonic-health.workspace = true
