[package]
name = "lib-remote"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# log = { workspace = true, features = ["std", "serde"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
