[package]
name = "aurora-base"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
[dependencies]
anyhow = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
conv = { version = "0.3.3", optional = true }
derive_builder = { workspace = true, optional = true }
derive_more = { version = "1.0.0-beta.6", features = ["full"], optional = true }
educe = { version = "0.4.23", optional = true }
fern = { version = "0.6.2", optional = true }
joinery = { version = "3.1.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
log = { version = "0.4.20", optional = true }
once_cell = { workspace = true, optional = true }
pin-project = { version = "1.1.3", optional = true }
rayon = { version = "1.8.0", optional = true }
serde = { workspace = true, optional = true }
soa_derive = { version = "0.13.0", optional = true }
tap = { version = "1.0.1", optional = true }
thiserror = { version = "1.0.50", optional = true }
tokio = { workspace = true, optional = true }
validator = { version = "0.16.1", optional = true }

[dev-dependencies]
fakeit = "1.2.0"
insta = "1.34.0"
pretty_assertions = "1.4.0"
proptest = "1.4.0"
trybuild = "1.0.85"
