[package]
name = "aurora-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
lib_common = { path = "../../crates/lib-common", package = "lib-common" , features = ["otel"]}
lib_conifg = { path = "../../crates/lib-config", package = "lib-config" }
lib_proto = { path = "../../crates/lib-proto", package = "lib-proto" }
axum = { workspace = true }
axum-extra = { workspace = true }
# log.workspace = true
md5 = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
struct-convert = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-health = { workspace = true }
tower = { workspace = true, features = ["full"] }
tower-cookies = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing.workspace = true
typed-builder = "0.18.0"
uuid = { workspace = true, features = ["v4", "fast-rng"] }
[dev-dependencies]
anyhow = { workspace = true }
httpc-test = { workspace = true }
serial_test = { workspace = true }
url = { workspace = true }
